--- a/Ls2.css
+++ b/Ls2.css
@@ -191,6 +191,7 @@ body.lightStore .cart::-webkit-scrollbar{
     text-shadow: 2px 2px 4px darkblue;
     text-decoration: underline;
     margin-top: -15px;
+    font-size: 20px;
 }
 #cartItems{
     color: white;
@@ -252,11 +253,18 @@ body.lightStore .cart::-webkit-scrollbar{
     width: 60%;
     border: 2px solid yellowgreen;
     box-shadow: 0px 2px 10px black;
+    font-size: 16px;
   }
   #voiceSearchButton{
     position: relative;
-    right: 45px;
-    background-color: rgba(8, 182, 8, 0.863);
+    right: 35px;
+    top: 4px;
+    background-color: rgba(7, 6, 73, 0.925);
+    font-size: 21px;
+    padding: 0;
+    border-bottom: 1px solid rgba(255, 217, 0, 0.849);
+    border-radius: 4px;
+    box-shadow: 0px 2px 10px yellowgreen;
   }
   input{
     margin: 0% auto;
@@ -557,8 +565,13 @@ body.lightStore .cart::-webkit-scrollbar{
       border: none;
       justify-content: center;
       align-items: center;
-      text-align: center;
-     
-     
+      text-align: center; 
   }
+  .cart{
+    min-width: 50%;
+  }
+  .cart h2{
+   
+    font-size: 25px;
+}
   }
