--- a/Shopping.css
+++ b/Shopping.css
@@ -85,31 +85,24 @@ h2{
 #voice-search-btn{
   background-color: transparent;
   position: relative;
-  left: 150px;
-  height: 40px;
-  bottom: 5px;
-  border-radius: 15px;
+  left: 31.5%;
+  height: 35px;
+  bottom: 35px;
+  border-radius: 10px;
   border: none;
   cursor: pointer;
-  padding: 2px 4px;
-  font-size: 22px;
+  font-size: 24px;
   color: blue;
-  text-shadow: 0px 2px 4px rgba(153, 205, 50, 0.973);
+  text-shadow: 0px 2px 4px lightskyblue;
+  border-bottom: 2px solid wheat;
+  box-shadow: 0px 1px 5px rgba(135, 206, 250, 0.863);
 }
-#voice-search-btn:hover{
-  box-shadow: 0px 2px 10px gold;
-  border-radius: 10px;
-}
+
 body.lightStore #voice-search-btn{
-  border-bottom: 2px solid rgba(153, 205, 50, 0.863);
-  box-shadow: 0px 2px 5px rgba(224, 40, 77, 0.822);
+  text-shadow: 0px 2px 4px rgba(153, 205, 50, 0.973);
+  box-shadow: 0px 1px 5px rgba(255, 217, 0, 0.849);
 }
-body.lightStore #voice-search-btn i:hover{
-  font-size: 20px;
-  color: rgb(235, 62, 96);
-  padding: 5px;
-  
-}
+
 #search-bar {
   margin: 0% auto;
   display: flex;
@@ -124,7 +117,6 @@ body.lightStore #voice-search-btn i:hover{
   background-color: rgba(18, 119, 177, 0.438);
   text-align: center;
   box-shadow: 0px 1px 5px lightsalmon;
-  margin-bottom: -35px;
   cursor: pointer;
  
 }
@@ -286,7 +278,6 @@ p{
   }
   #search-bar {
     margin: 0% auto;
-    margin-bottom: -30px;
     width: 50%;
     padding: 6px;
    
@@ -294,10 +285,10 @@ p{
   #voice-search-btn{
     background-color: transparent;
     position: relative;
-    left: 300px;
-    height: 40px;
-    bottom: 10px;
-    border-radius: 15px;
+    left: 23%;
+    height: 35px;
+    bottom: 35px;
+    border-radius: 10px;
     border: none;
     cursor: pointer;
     padding: 2px 4px;
@@ -305,6 +296,7 @@ p{
     color: blue;
     text-shadow: 0px 2px 4px rgba(153, 205, 50, 0.973);
   }
+
 }
 
 /* Style for the cart container */
