--- a/Shopping.css
+++ b/Shopping.css
@@ -27,9 +27,12 @@ h1{
     font-size: 30px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 5px;
-    background-color: rgba(255, 255, 255, 0.096);
+    background-image: url(AstronautHeadLogoGif.gif);
+    background-position: center;
+    background-size: 40%;
+    opacity: 80%;
     border-radius: 100%;
-    border: 6px solid rgba(241, 232, 214, 0.13);
+    border: 6px solid rgba(15, 50, 209, 0.644);
     box-shadow: 0px 2px 10px rgba(135, 206, 250, 0.445);
     margin-bottom: 15px;
     cursor: pointer;
@@ -46,7 +49,10 @@ h1 ion-icon{
 }
 body.lightStore h1{
     background-color: rgba(0, 0, 0, 0.39);
-    border: 4px solid rgba(255, 217, 0, 0.384);
+    border-top: 6px solid maroon;
+    border-bottom: 6px solid rgba(0, 0, 255, 0.466);
+    border-left: 6px solid rgba(255, 217, 0, 0.863);
+    border-right: 6px solid rgba(255, 217, 0, 0.863);
     box-shadow: 0px 2px 15px black;
     text-shadow: 2px 2px 4px gold;
     justify-content: center;
