--- a/Shopping.css
+++ b/Shopping.css
@@ -684,6 +684,24 @@ body.lightStore h6 ion-icon{
     background-color: rgba(68, 5, 31, 0.24);
 
   }
+  
+  #toggle-cart {
+    position: relative;
+  }
+  
+  .cart-badge {
+    position: absolute;
+    top: -5px;
+    right: -10px;
+    background-color: red;
+    color: white;
+    font-size: 12px;
+    padding: 5px;
+    border-radius: 50%;
+    min-width: 18px;
+    text-align: center;
+  }
+  
 
   
   
