--- a/Shopping222.css
+++ b/Shopping222.css
@@ -332,8 +332,13 @@ body.lightStore .cart-badge{
     width: 50px;
     height: 50px;
     padding: 2px;
-    border: 1px solid yellowgreen;
+    border: 1px solid lightskyblue;
+    box-shadow: 0px 2px 6px white;
     border-radius: 8px;
+  }
+  body.lightStore .cart img{
+    border: 1px solid gold;
+    box-shadow: 0px 2px 6px yellowgreen;
   }
   
   /* Hide cart by default */
