--- a/Shopping222.css
+++ b/Shopping222.css
@@ -14,6 +14,7 @@ body{
 }
 body.lightStore{
     background: linear-gradient(to right,black,darkblue,lightgreen,maroon,black);
+    transition: 1s;
 }
 h1{
     margin: 0% auto;
@@ -36,6 +37,7 @@ h1{
     box-shadow: 0px 2px 10px rgba(135, 206, 250, 0.445);
     margin-bottom: 15px;
     cursor: pointer;
+    transition: 1s;
 
 }
 h1 ion-icon{
@@ -57,6 +59,7 @@ body.lightStore h1{
     text-shadow: 2px 2px 4px gold;
     justify-content: center;
     align-items: center;
+    transition: 1s;
 }
 body.lightStore h1 ion-icon{
     color: rgba(255, 217, 0, 0.486);
@@ -108,6 +111,7 @@ h2{
 body.lightStore #voice-search-btn{
   text-shadow: 0px 2px 4px rgba(153, 205, 50, 0.973);
   box-shadow: 0px 1px 5px rgba(255, 217, 0, 0.849);
+  transition: 1s;
 }
 
 #search-bar {
@@ -162,6 +166,7 @@ body.lightStore #search-input{
 body.lightStore .product img{
     border: 2px solid rgba(255, 217, 0, 0.616);
     box-shadow: 0px 5px 20px black;
+    transition: 1s;
 }
 .add-to-cart{
     border: none;
