--- a/Shopping222.css
+++ b/Shopping222.css
@@ -725,15 +725,21 @@ body.lightStore h6 ion-icon{
   }
 
   .container{
+    margin: 0px;
+    padding: 0px;
     visibility: hidden;
-    height: 0;
+    height: 0px;
+    width: 0px;
   }
   @media (min-width: 600px) {
     .container{
+      margin: 0% auto;
       visibility: visible;
-      height: auto;
+      min-height: 350px;
       margin-top: 30px;
       margin-bottom: 50px;
+      min-width: 600px;
+     
      
     }
   .Box{
