--- a/Shopping222.css
+++ b/Shopping222.css
@@ -12,6 +12,7 @@ body{
     padding-bottom: 15px;
     color: wheat; 
     transition: 1s;  
+ 
 }
 body.lightStore{
     background: linear-gradient(to right,black,darkblue,lightgreen,maroon,black);
@@ -727,20 +728,21 @@ body.lightStore h6 ion-icon{
   .container{
     margin: 0px;
     padding: 0px;
-    visibility: hidden;
+    display: none;
     height: 0px;
     width: 0px;
   }
-  @media (min-width: 600px) {
+  .Box{
+  
+  }
+  @media (min-width: 768px) {
     .container{
       margin: 0% auto;
-      visibility: visible;
-      min-height: 350px;
+      display: block;
+      height: 350px;
       margin-top: 30px;
       margin-bottom: 50px;
-      min-width: 600px;
-     
-     
+      min-width: 300px; 
     }
   .Box{
     margin: 0% auto;
