--- a/Shopping.css
+++ b/Shopping.css
@@ -12,6 +12,7 @@ body{
   padding-bottom: 15px;
   color: wheat; 
   transition: 1s;  
+
 }
 body.lightStore{
   background: linear-gradient(to right,black,darkblue,lightgreen,maroon,black);
@@ -723,6 +724,127 @@ body.lightStore .product{
   background-color: rgba(68, 5, 31, 0.24);
 
 }
+
+.container{
+  margin: 0px;
+  padding: 0px;
+  display: none;
+  height: 0px;
+  width: 0px;
+}
+.Box{
+
+}
+@media (min-width: 768px) {
+  .container{
+    margin: 0% auto;
+    display: block;
+    height: 350px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    min-width: 300px; 
+  }
+.Box{
+  margin: 0% auto;
+  position: relative;
+  width: 300px;
+  height: 300px;
+  animation: animate 15s linear infinite;
+}
+@keyframes animate {
+  0% {
+      rotate: 0deg;
+  }
+  100% {
+      rotate: 360deg;
+  }
+}
+.container:hover .Box{
+  animation-play-state: paused;
+}
+.img{
+  position: relative;
+  left: -50%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+.img .imgBox{
+  position: absolute;
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  border: 2px solid rgba(255, 217, 0, 0.801);
+  transform: rotate(calc(360deg/8 * var(--i)));
+  transform-origin: 190px;
+  box-shadow: 0px 2px 20px blue;
+}
+body.light .img .imgBox{
+  box-shadow: 0px 2px 15px #ff105e;
+  border: 2px solid rgba(255, 217, 0, 0.863);
+}
+
+.img .imgBox img{
+  position: absolute;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  transform: rotate(calc(-360deg/8 * var(--i)));
+  animation: animateimgBox 15s linear infinite;
+}
+
+.container:hover .img .imgBox img{
+  animation-play-state: paused;
+}
+
+@keyframes animateimgBox {
+  0% {
+      rotate: 0deg;
+  }
+  100% {
+      rotate: -360deg;
+  } 
+}
+h5{
+margin: 0% auto;
+position: relative;
+width: 160px;
+bottom: -170px;
+left: 0px;
+font-size: 20px;
+font-family: Georgia, 'Times New Roman', Times, serif;
+font-weight: bold;
+color: white;
+text-shadow: 2px 2px 4px lightcoral;
+background-color: rgba(0, 0, 139, 0.603);
+box-shadow: 0px 2px 12px lightskyblue;
+padding: 10px 20px;
+border-radius: 15px;
+
+}
+h5 ion-icon{
+color: rgba(255, 217, 0, 0.596);
+font-weight: bold;
+border-bottom: 2px solid gold;
+box-shadow: 0px 2px 10px #ff1060e8;
+border-radius: 50px;
+background-image: url(lollipop_3GIF.gif);
+background-size: cover;
+background-position: center;
+}
+body.lightStore h5 ion-icon{
+box-shadow: 0px 2px 15px blue;
+}
+
+} 
+
+
 
 
   
