--- a/Shopping222.css
+++ b/Shopping222.css
@@ -145,11 +145,56 @@ body.lightStore #search-input{
   background-color: rgba(221, 57, 112, 0.233);
   transition: 0.5s;
 }
+.product-List2{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 40px;
+  padding: 10px;
+}
 .product-List{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
-    padding: 10px;
+  margin: 0% auto;
+  display: flex;
+  flex-wrap: row;
+  width: 370px;
+  align-items: center;
+  justify-content: space-between;
+  border-right: 4px solid red;
+  border-left: 4px solid blue;
+  border-top: 4px solid rgba(255, 217, 0, 0.808);
+  border-bottom: 4px solid rgba(255, 217, 0, 0.808);
+  border-radius: 20px;
+  overflow: scroll;
+  gap: 20px;
+  padding: 10px;
+}
+.product-List::-webkit-scrollbar{
+  background: transparent;
+  width: 0px;
+  height: 15px;
+ 
+}
+.product-List::-webkit-scrollbar-track{
+  background: transparent;
+  box-shadow: 0px 2px 6px yellowgreen;
+  border-radius: 20px;
+  width: 0;
+  height: 0;
+}
+
+.product-List::-webkit-scrollbar-thumb{
+  background: darkblue;
+  border: 1px solid rgba(255, 217, 0, 0.781);
+  border-radius: 10px;
+  width: 0px;
+  height: 0px;
+  cursor: grab;
+}
+.product-List::-webkit-scrollbar-thumb:hover{
+  background-color: green;
+  
+}
+.product-List::-webkit-scrollbar-thumb:active{
+  cursor: grabbing;
 }
 .product img{
     margin: 0% auto;
@@ -259,13 +304,20 @@ p{
     text-shadow: 2px 2px 4px gold;
 }
 @media  (min-width: 768px) {
-
-    .product-List{
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        gap: 40px;
-        padding: 10px;
-    }
+  .product-List{
+    margin: 0% auto;
+    display: flex;
+    flex-wrap: row;
+    width: 800px;
+    border: 2px solid yellowgreen;
+    border-radius: 20px;
+  }
+  .product-List2{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 40px;
+    padding: 10px;
+  }
     h1{
        margin: 0% auto;
        font-size: 40px;
@@ -731,9 +783,6 @@ body.lightStore h6 ion-icon{
     display: none;
     height: 0px;
     width: 0px;
-  }
-  .Box{
-  
   }
   @media (min-width: 768px) {
     .container{
