--- a/Shopping222.css
+++ b/Shopping222.css
@@ -249,6 +249,7 @@ body.lightStore .product img{
     position: relative;
 }
 .cart{
+  
     list-style: none;
     text-decoration: none;
     margin: 0% auto;
@@ -305,12 +306,7 @@ p{
 }
 @media  (min-width: 768px) {
   .product-List{
-    margin: 0% auto;
-    display: flex;
-    flex-wrap: row;
-    width: 800px;
-    border: 2px solid yellowgreen;
-    border-radius: 20px;
+    display: none;
   }
   .product-List2{
     display: grid;
