--- a/Shopping222.css
+++ b/Shopping222.css
@@ -77,6 +77,32 @@ h3{
 h2{
     margin-bottom: 15px;
 }
+.nav-info{
+  margin: 0% auto;
+  align-items: center;
+  text-align:  center;
+  margin-bottom: 15px;
+  opacity: 90%;
+  transition: 1s ease-in;
+}
+.nav-info a{
+  text-decoration: none;
+  text-align: center;
+  color: wheat;
+  border: 1px solid blue;
+  box-shadow: 0px 2px 0px rgba(135, 206, 250, 0.815);
+  padding: 5px 10px;
+  border-radius: 10px;
+}
+body.lightStore .nav-info a{
+  color: white;
+  text-shadow: 2px 2px 4px rgba(255, 217, 0, 0.842);
+  border-top: 2px solid rgba(153, 205, 50, 0.774);
+  border-bottom: 1px solid crimson;
+  background-color: rgba(0, 0, 0, 0.623);
+  box-shadow: 0px 1px 0px darkblue;
+  transition: 1s ease-out;
+}
 #language-selector{
   position: relative;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -150,6 +176,26 @@ body.lightStore #search-input{
   grid-template-columns: repeat(2, 1fr);
   gap: 40px;
   padding: 10px;
+}
+
+
+.product-List .product {
+  text-decoration: none;
+  transition: 1s;
+  animation: moveNavbar 30s linear infinite;
+}
+
+.product-List .product:hover {
+  color: #ff5722;
+}
+
+@keyframes moveNavbar {
+  100% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-500px);
+  }
 }
 .product-List{
   margin: 0% auto;
