--- a/Shopping222.css
+++ b/Shopping222.css
@@ -88,11 +88,26 @@ h2{
 .nav-info a{
   text-decoration: none;
   text-align: center;
-  color: wheat;
+  font-size: 12px;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  color: rgba(245, 222, 179, 0.842);
+  text-shadow: 0px 1px 2px whitesmoke;
+  letter-spacing: 1px;
   border: 1px solid blue;
   box-shadow: 0px 2px 0px rgba(135, 206, 250, 0.815);
   padding: 5px 10px;
+  margin: 5px;
   border-radius: 10px;
+}
+body.lightStore .nav-info a:hover{
+  border-bottom: 6px solid yellowgreen;
+  transition: 0.5s;
+
+}
+.nav-info a:hover{
+  border-bottom: 6px solid lightskyblue;
+  transition: 0.5s;
+
 }
 body.lightStore .nav-info a{
   color: white;
